# tcpip_socket_programming_by_python

./: pyproject.toml
src/: client1.py  gethostbyname.py  server0.py  server3_multiprocessing.py  server3_nonblocking.py
src/chapter02/: client0.py  client0udp.py  client0v6.py  server1.py  server2.py  server3.py  server3_nonblocking.py
src/chapter03/: chatclient.py  chatserv.py  chattcpclient.py  chattcpserv.py  logclient1.py  logserver.py
