[tool.poetry]
name = "tcpip_socket_programming_by_python"
version = "0.1.0"
description = ""
authors = ["akitanak <akihito_tanaka@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.2"
rope = "^0.17.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
